RegExp().toString and .toSource should return '/(?:)/', not '//' (bug 225550, r=sparky).